fix: notification hidden behind navbar

--- a/styles/components/general/navbar.scss
+++ b/styles/components/general/navbar.scss
@@ -3,7 +3,7 @@
 	border-radius: 10px;
 
 	position: fixed;
-	z-index: 99999;
+	z-index: 9999;
 	top: 25px;
 	left: 50%;
 	transform: translateX(-50%);
